# abook

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  environment-dev.yml  environment.yml  pyproject.toml
.github/workflows/: ci.yml
.specify/: feature.json
docs/: README.md  graduation.md
notebooks/: README.md  agentic_demo.ipynb  gepa_demo.ipynb  reviewer_skillopt.ipynb  skillopt_demo.ipynb  specify_judge_comparison.ipynb  specify_skillopt.ipynb
notebooks/analysis/: agentic_multiturn_analysis.ipynb  ai-showcase.ipynb  shreya-shankar-agent-qualitative-analysis.ipynb
notebooks/gepa/: 00-quickstart.ipynb  01-architecture-tour.ipynb  02-default-adapter-deep-dive.ipynb  03-aime-mini-live.ipynb  04-pareto-frontier-viz.ipynb  05-custom-adapter.ipynb  06-optimize-anything-svg.ipynb  07-kernel-restart-survival.ipynb  08-vs-script-baseline.ipynb  README.md
notebooks/skillopt/: 01-architecture-tour.ipynb  02-gradient-deep-dive.ipynb  03-optimizer-types.ipynb  04-scheduler-and-budget.ipynb  05-config-yaml.ipynb  06-quickstart-and-train.ipynb  07-trajectory-log-eda.ipynb  08-custom-benchmark-env.ipynb  README.md
notebooks/utils/: __init__.py  demo.py  skillopt_analysis.py
specs/: constitution.md
specs/agentbook_thesis/: data-model.md  implementation-notes.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/agentbook_thesis/checklists/: requirements.md
specs/agentbook_thesis/contracts/: loop-contract.md
specs/skillopt-skill-optimization/: plan.md  spec.md  tasks.md
src/abook/: notebook_fix.py
src/agentbook/: budget.py  contract.py  loop.py  notebook_fix.py  session.py
src/agentbook/adapters/: __init__.py  claude_agent_adapter.py  gepa_adapter.py  skillopt_adapter.py
tasks/: README.md
tasks/reviewer-skillopt/: gen_instances.py  make_split.py  run_smoke.py  seed_skill.md  validate_reward.py
tasks/reviewer-skillopt/reviewer_env/: __init__.py  adapter.py  dataloader.py  prompts.py  reward.py  rollout.py
tasks/reviewer-skillopt/reviewer_env/tests/: test_contracts.py
tasks/specify-skillopt/: compare_judges.py  gen_instances.py  make_split.py  run_smoke.py  seed_skill.md  validate.py
tasks/specify-skillopt/specify_env/: __init__.py  adapter.py  dataloader.py  judge.py  prompts.py  reward.py  rollout.py
tests/: test_budget.py  test_claude_agent.py  test_contract.py  test_gepa_adapter.py  test_loop.py  test_skillopt_analysis.py  test_smoke.py
tests/fixtures/skillopt_run/: history.json  summary.json
tests/fixtures/skillopt_run/skills/: skill_v0001.md
tests/fixtures/skillopt_run/test_eval_baseline/: results.jsonl
tests/fixtures/skillopt_run/test_eval_baseline/predictions/squad-val-12/: conversation.json  target_user_prompt.txt
tests/fixtures/skillopt_run/test_eval_baseline/predictions/squad-val-13/: conversation.json  target_system_prompt.txt  target_user_prompt.txt
