[build-system]
requires = ["hatchling>=1.25", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "agentnote"
dynamic = ["version"]
description = "Eval: does a notebook substrate lift a coding agent?"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10,<3.14"
authors = [{ name = "Anaconda, Inc." }]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.hatch.build]
exclude = ["tests/**", ".github/**", "Makefile"]

[tool.hatch.build.targets.wheel]
packages = ["src/agentnote"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = [
    "src/agentnote",
    "pyproject.toml",
    "README.md",
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["agentnote"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
explicit_package_bases = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
