[build-system]
requires = ["hatchling>=1.25", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "abook"
dynamic = ["version"]
description = "A self-evolving notebook — eval and improvement as one loop."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10,<3.14"
authors = [{ name = "Anaconda, Inc." }]

dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "ruff>=0.15.0",
]

[project.scripts]
abook-fix = "abook.notebook_fix:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.hatch.build]
exclude = ["tests/**", ".github/**", "Makefile"]

[tool.hatch.build.targets.wheel]
packages = ["src/abook"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = [
    "src/abook",
    "pyproject.toml",
    "README.md",
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.lint.per-file-ignores]
# Notebook cells legitimately interleave imports with code
# (manage_dependencies / setup blocks before the actual imports).
"*.ipynb" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["abook"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
explicit_package_bases = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
